# editor-api

./: .gitignore  CMakeLists.txt  README.md  dashboard.h  editor.h  native.h  version.h  web.h
imgui/: Editor.cpp  Editor.h  FontCache.cpp  FontCache.h  GL.h  imgui.cpp  imgui.h  main.cpp  main.h  text.cpp  text.h
include/: config.h  dashboard.h  editor.h  native.h  web.h
include/icons/: character.h  eye.h  music.h  theater.h
lib/: CMakeLists.txt  config.cpp  dashboard.cpp  editor.cpp  fs.h  native.cpp  random.cpp  random.h  run.cpp  run.h  util.h  version.cpp  web.cpp
